# craps

./: .gitignore  Makefile  Readme.md
.github/workflows/: build.yml  release.yml  shared-build.yml
assets/: config.yaml
assets/config/: config.yaml  sys-config.yaml
assets/tables/: Table-1.yaml  TableStats-LasVegas.yaml  tables.yaml
docs/: Readme.md  docs.mak
docs/site/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/src/: conf.py  index.rst
etc/: ChatGPT-TableStats.cpp  ChatGPT-TableStats.h  ConfigDefaults.cpp  ConfigEnv.cpp  ConfigFiles.cpp  ConfigFiles.h  ConfigManager.cpp  YamlConfigExample.txt  todo-install.txt  todo.txt
src/: CMakeLists.txt
src/lib-codec/: CMakeLists.txt
src/lib-codec/include/codec/: CodecFast.h  CodecSlow.h  Doxygen.h  EnumChannelDirection.h
src/lib-codec/src/: CodecFast.cpp  CodecSlow.cpp  EnumChannelDirection.cpp
src/lib-codec/utest/: CMakeLists.txt  CodecFastTest.cpp  CodecSlowTest.cpp  EnumChannelDirectionTest.cpp  utest-codec-main.cpp
src/lib-controller/: CMakeLists.txt
src/lib-controller/include/controller/: AppController.h  CommandLine.h  ConfigCommandLine.h  ConfigDefaults.h  ConfigEnv.h  ConfigFiles.h  ConfigManager.h  CrapsGame.h  Doxygen.h  Env.h  EventLoop.h  EventManager.h  Events.h  GameController.h  GameControllerIntfc.h  GameEvent.h  Globals.h  Placeholder.h  PlayerDescription.h  PlayerManager.h  Properties.h  SessionSummary.h  TableDescription.h  TableManager.h  TableManifest.h  ViewIntfc.h
src/lib-controller/src/: AppController.cpp  CommandLine.cpp  ConfigCommandLine.cpp  ConfigDefaults.cpp  ConfigEnv.cpp  ConfigFiles.cpp  ConfigManager.cpp  CrapsGame.cpp  Env.cpp  EventLoop.cpp  GameController.cpp  Globals.cpp  Placeholder.cpp  PlayerManager.cpp  Properties.cpp  TableManager.cpp  TableManifest.cpp
src/lib-controller/utest/: CMakeLists.txt  ConfigManagerTest.cpp  PlaceholderTest.cpp  TableManifestTest.cpp  utest-controller-main.cpp
src/lib-craps/: CMakeLists.txt
src/lib-craps/include/craps/: Bank.h  BankStats.h  BankStatsStruct.h  BetStats.h  BetStatsStruct.h  CrapsBet.h  CrapsBetIntfc.h  CrapsTable.h  DecisionRecord.h  Dice.h  Doxygen.h  EnumBetName.h  EventManager.h  Events.h  Globals.h  OddsTables.h  Player.h  PlayerManager.h  Properties.h  RollStats.h  RollStatsStruct.h  SessionHistory.h  TableConfig.h  TableStats-hybrid.h  TableStats.h
src/lib-craps/src/: Bank.cpp  BankStats.cpp  BankStatsStruct.cpp  BetStats.cpp  BetStatsStruct.cpp  CommandLine.cpp  CrapsBet.cpp  CrapsGame.cpp  CrapsTable.cpp  Dice.cpp  EnumBetName.cpp  Globals.cpp  Player.cpp  PlayerManager.cpp  Properties.cpp  RollStats.cpp  RollStatsStruct.cpp  SessionHistory.cpp  TableConfig.cpp  TableStats-hybrid.cpp  TableStats.cpp
src/lib-craps/utest/: CMakeLists.txt  CrapsBetPart1Test.cpp  CrapsBetPart2Test.cpp  CrapsTableTest.cpp  EnumBetNameTest.cpp  EventManagerTest.cpp  PropertiesTest.cpp  SessionHistoryTest.cpp  TableStatsPart1Test.cpp  TableStatsPart2Test.cpp  TableStatsPart3Test.cpp  TableStatsPart4Test.cpp  TableStatsPart5Test.cpp  TableStatsPart6Test.cpp  TableStatsTest.cpp  utest-lib-craps.cpp
src/lib-cui/: CMakeLists.txt
src/lib-cui/include/cui/: ChatGPTLoop.h  ConsoleView.h  Doxygen.h  Placeholder.h
src/lib-cui/src/: ConsoleView.cpp  Placeholder.cpp
src/lib-cui/utest/: CMakeLists.txt  PlaceholderTest.cpp  utest-cui-main.cpp
src/lib-gen/: CMakeLists.txt
src/lib-gen/src/: BuildInfo.cpp  ErrorPass.cpp  FileUtils.cpp  Logger.cpp  Money.cpp  MoneyUtil.cpp  MultiLayerCfg.cpp  MultiLayerConfig.cpp  StringUtils.cpp  Timepoint.cpp  TimerManager.cpp  Uuid.cpp  saveMultiLayerConfig.cpp
src/lib-gen/utest/: BuildInfoTest.cpp  CMakeLists.txt  MoneyTest.cpp  MoneyUtilTest.cpp  MultiLayerConfigTest.cpp  StringUtilsTest.cpp  TimerManagerTest.cpp  utest-gen-main.cpp
src/lib-gui/: CMakeLists.txt
src/lib-gui/include/gui/: Doxygen.h  Placeholder.h
src/lib-gui/src/: Placeholder.cpp
src/lib-gui/utest/: CMakeLists.txt  PlaceholderTest.cpp  utest-gui-main.cpp
src/lib-tui/: CMakeLists.txt
src/lib-tui/include/tui/: Doxygen.h  Placeholder.h
src/lib-tui/src/: Placeholder.cpp
src/lib-tui/utest/: CMakeLists.txt  PlaceholderTest.cpp  utest-tui-main.cpp
src/main/: CMakeLists.txt
src/main/include/: Bank.h  Bet.h  CommandLine.h  Craps.h  CrapsBet.h  CrapsBetEvaluator.h  CrapsBetImpl.h  CrapsBetIntfc.h  CrapsGame.h  CrapsTable.h  DecisionRecord.h  Dice.h  Doxygen.h  EnumBetName.h  EventManager.h  Events.h  Globals.h  OddsTables.h  Player.h  PlayerIdGenerator.h  PlayerManager.h  PlayerPicker.h  Properties.h  RedFlame.h  RoyalCraps.h  TablePicker.h
src/main/src/: Bank.cpp  Bet.cpp  CommandLine.cpp  Craps.cpp  CrapsBet.cpp  CrapsBetEvaluator.cpp  CrapsGame.cpp  CrapsTable.cpp  Dice.cpp  EnumBetName.cpp  Globals.cpp  Player.cpp  PlayerIdGenerator.cpp  PlayerManager.cpp  PlayerPicker.cpp  Properties.cpp  RedFlame.cpp  RoyalCraps.cpp  TablePicker.cpp  main.cpp
src/main/utest/: CMakeLists.txt  CrapsBetPart1Test.cpp  CrapsBetPart2Test.cpp  CrapsBetTest.cpp  CrapsGameTest.cpp  CrapsTableTest.cpp  CrapsTest.cpp  EnumBetNameTest.cpp  PropertiesTest.cpp  RedFlameTest.cpp  RoyalCrapsTest.cpp  utest-main.cpp
tools/cmake/: BuildInfoDefs.h.in  CodeCoverage.cmake  buildinfodefs.cmake  coverage.cmake  disable-bad-compiler.cmake  disable-ctest-targets.cmake  gen.cmake  setup-build-bin-lib-dirs.cmake  setup-path-to-generators.cmake  show-project.cmake  version-vars.cmake
tools/conan/: conanfile.py  registry-aws-arty.properties  registry-conancenter.properties
tools/containers/: containers.mak
tools/scripts/: code-coverage-badge.bash  conan-registry-login.bash  conan-registry-logout.bash  conan-registry-setup.bash  conan-registry-status.bash  container-registry-login.bash  container-registry-logout.bash  container-registry-status.bash  devenv.bash  docs-publish.bash  lib-conan-registry.bash  lib-container-registry.bash  start-bld-container.bash  test-tarball.bash
tools/submakes/: conan-consumer.mak  conan-org.mak  conan-registry.mak  conan.mak  container-names-cppcheck.mak  container-names-doxygen.mak  cpp.mak  (+19 more)
(+217 files in other folders)
